--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.1",
     "date-fns": "^2.21.1",
     "gray-matter": "^4.0.3",
+    "jquery": "^3.6.0",
     "next": "^10.0.0",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
