--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "autoprefixer": "^10.2.5",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
     "date-fns": "^2.21.1",
