--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "autoprefixer": "^10.2.5",
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
     "date-fns": "^2.21.1",
     "gray-matter": "^4.0.3",
+    "jquery": "^3.6.0",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
